<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3EFEF"
        android:backgroundTint="#F8F3F3"
        tools:context=".MainActivity">


        <com.example.calculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="345dp"
            android:layout_height="67dp"
            android:text="@string/_0"
            android:textAlignment="viewEnd"
            android:textColor="#1C1B1B"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="66dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10sp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="410dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="158dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="346dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0"
            android:textAlignment="viewEnd"
            android:textColor="#191818"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/myTextView"
            app:layout_constraintEnd_toEndOf="@+id/myTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/myTextView" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.502">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_1"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_2"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_3"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_4"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_5"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_6"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_7"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_8"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_9"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonEmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/AC"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/jia"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/jian"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/cheng"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/chu"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFC107"
                android:text="@string/dengyu"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="4" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/baifenhao"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/xiaoshudian"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#428EC1"
                android:text="@string/genhao"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="3" />

            <ImageButton
                android:id="@+id/imageButtonDel"
                android:layout_width="96dp"
                android:layout_height="61dp"
                android:backgroundTint="#428EC1"
                app:layout_column="3"
                app:layout_row="0"
                app:srcCompat="@drawable/ic_baseline_backspace_24"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="346dp" />

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="177dp"
            android:layout_height="66dp"
            android:backgroundTint="#428EC1"
            android:text="@string/Change"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/myTextView"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>